--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Olá Javascript</h1>
-
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolore ut et consectetur obcaecati enim cumque, rerum soluta, nobis quis ipsam ipsa maxime praesentium ipsum atque vero sequi, incidunt sint?
     <script src="script.js"></script>
   </body>
 </html>
