--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <h1>Olá Javascript</h1>
+    <script>//js interno
+      alert('Olá Mundo!');
+    </script>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolore ut et consectetur obcaecati enim cumque, rerum soluta, nobis quis ipsam ipsa maxime praesentium ipsum atque vero sequi, incidunt sint?
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
