--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,6 @@
       alert('Olá Mundo!');
     </script>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolore ut et consectetur obcaecati enim cumque, rerum soluta, nobis quis ipsam ipsa maxime praesentium ipsum atque vero sequi, incidunt sint?
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
