--- a/html/Javascript02.html
+++ b/html/Javascript02.html
@@ -21,6 +21,6 @@
             document.write(5 + 5);
         </script>
     </p>
-    <script src="js/js02.js"></script>
+    <script src="../js/js02.js"></script>
 </body>
 </html>
